Fix: Transaction per user list
